--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,32 @@
 * Created on: Sep 2020
 * This file contains the CSS for index.html
 */
+
+body {
+  background-color: rgb(116, 116, 116);
+}
+
+h1 {
+  background-color: rgb(75, 75, 75);
+  color: hsl(0, 100%, 50%);
+  padding: 40px;
+  text-align: center;
+  font-size: 300%;
+  font: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p {
+  background-color: rgb(65, 121, 144);
+  text-align: center;
+  font-size: 140%;
+  font: bold;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
